# onex

./: Cargo.toml  createOnexBundle.ps1  runTestApp.ps1  swap.ps1
.github/workflows/: action.yml  audit.yml  build.yml
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
loader/: Cargo.toml
loader/src/: job_object.rs  lib.rs  main.rs  pe_parser.rs  projfs.rs
loader/tests/: projfs_test.rs  test_provider.rs
macros/: Cargo.toml
macros/src/: lib.rs
sexe/: Cargo.toml
sexe/src/: lib.rs  main.rs  zip_util.rs
testapp/: Cargo.toml
testapp/assets/: sexe_run
testapp/src/: main.rs
util/: Cargo.toml
util/src/: file.rs  lib.rs  misc.rs  projfs.rs  result.rs  windows.rs  zip.rs
util/tests/: projfs_test.rs  test_provider.rs
