[package]
name = "sexe_loader"
version = "0.1.1"
authors = ["Ben Weedon <ben@weedon.email>"]
edition = "2018"

[dependencies]
flexi_logger = { version = "0.16.2", default-features = false }
lazy_static = "1.4.0"
log = "0.4.11"
scopeguard = "1.1.0"
util = { path = "../util" }
uuid = { version = "0.8.1", features = ["v4"] }
winapi = { version = "0.3.9", features = ["wincon"] }
zip = { version = "0.5.8", default-features = false }

[dependencies.winapi_local]
package = "winapi"
git = "file://C:/Users/Ben/repos/winapi-rs"
branch = "projfs"
features = ["combaseapi", "projectedfslib", "winerror"]

[dev-dependencies.winapi_local]
package = "winapi"
git = "file://C:/Users/Ben/repos/winapi-rs"
branch = "projfs"
features = ["combaseapi", "projectedfslib", "winerror", "fileapi", "handleapi"]
