[package]
name = "sexe_loader"
version = "0.1.1"
authors = ["Ben Weedon <ben@weedon.email>"]
edition = "2018"

[[bin]]
name = "test_provider"
path = "tests/test_provider.rs"

[dependencies]
flexi_logger = { version = "0.16.2", default-features = false }
lazy_static = "1.4.0"
log = "0.4.11"
util = { path = "../util" }
uuid = { version = "0.8.1", features = ["v4"] }
winapi = { version = "0.3.9", features = ["wincon"] }
zip = { version = "0.5.8", default-features = false }

[dependencies.winapi_local]
package = "winapi"
git = "https://github.com/binyomen/winapi-rs"
branch = "projfs"
features = ["combaseapi", "projectedfslib", "winerror"]

[dev-dependencies.winapi_local]
package = "winapi"
git = "https://github.com/binyomen/winapi-rs"
branch = "projfs"
features = ["combaseapi", "projectedfslib", "winerror", "fileapi", "handleapi"]
