[package]
name = "onex_loader"
version = "0.1.3"
authors = ["Ben Weedon <ben@weedon.email>"]
edition = "2018"

[dependencies]
flexi_logger = { version = "0.16.2", default-features = false }
log = "0.4.11"
util = { path = "../util" }
uuid = { version = "0.8.1", features = ["v4"] }
winapi = { version = "0.3.9", features = ["handleapi", "ioapiset", "jobapi2", "wincon"] }
zip = { version = "0.5.8", default-features = false }
